# pplanner

./: .bashrc  .gitignore  CMakeLists.txt  Dockerfile  Makefile  README.md  environment.yml  install.sh
src/: CMakeLists.txt  closed_list.cc  closed_list.h  cuda_planner.cc  cuda_planner.cu  cuda_sas_plus.cu  cuda_sas_plus.cuh  cuda_search_factory.cu  cuda_search_factory.cuh  cuda_search_graph.cu  cuda_search_graph.cuh  cuda_successor_generator.cu  cuda_successor_generator.cuh  distributed_search_graph_factory.cc  distributed_search_graph_factory.h  dtg.cc  dtg.h  evaluator.cc  evaluator.h  evaluator_factory.cc  evaluator_factory.h  mpi_planner.cc  mpi_search_factory.cc  mpi_search_factory.h  open_list.cc  open_list.h  open_list_factory.cc  open_list_factory.h  planner.cc  preferred_open_list.cc  preferred_open_list.h  problem.cc  problem.h  random_walk_evaluator.cc  random_walk_evaluator.h  random_walk_evaluator_factory.cc  random_walk_evaluator_factory.h  run_common.cc  run_common.h  run_gbfs.cc  (+27 more)
src/common/: malloc_check.h
src/cuda_common/: cuda_bit_vector.cuh  cuda_check.cuh  cuda_prefix_sum.cu  cuda_prefix_sum.cuh  cuda_random.cu  cuda_random.cuh
src/cuda_hash/: cuda_zobrist_hash.cu  cuda_zobrist_hash.cuh
src/cuda_heuristics/: cuda_landmark_count.cuh
src/cuda_landmark/: cuda_landmark_count_base.cu  cuda_landmark_count_base.cuh  cuda_landmark_graph.cu  cuda_landmark_graph.cuh
src/cuda_search/: cuda_bmrw.cu  cuda_bmrw.cuh  cuda_bmrw_gbfs.cu  cuda_bmrw_gbfs.cuh  cuda_bmrw_gbfs_focus.cu  cuda_bmrw_gbfs_focus.cuh  cuda_bmrw_gbfs_focus2.cu  cuda_bmrw_gbfs_focus2.cuh  cuda_bmrw_gbfs_share.cu  cuda_bmrw_gbfs_share.cuh  cuda_gbfs.cu  cuda_gbfs_kernel.cu  cuda_gbfs_kernel.cuh  cuda_hdgbfs.cu  cuda_hdgbfs.cuh  cuda_hetro_gbfs.cu  cuda_hetro_gbfs.cuh  cuda_random_walk.cu  cuda_random_walk.cuh  cuda_rwagbfs.cu  cuda_rwagbfs.cuh
src/dominance/: lds.cc  lds.h  lts.cc  lts.h  qdf.cc  qdf.h
src/hash/: array_hash.h  distribution_hash.cc  distribution_hash.h  distribution_hash_factory.cc  distribution_hash_factory.h  gra_zobrist_hash.cc  gra_zobrist_hash.h  pair_hash.h  zobrist_hash.cc  zobrist_hash.h
src/heuristic/: additive.cc  additive.h  blind.h  ff.h  ff_add.cc  ff_add.h  ff_s.h  graphplan.cc  graphplan.h  heuristic.h  landmark_count.cc  landmark_count.h  new_fact.cc  new_fact.h  new_operator.cc  new_operator.h  none.h  preferring.h  simplified_graphplan.cc  simplified_graphplan.h
src/heuristics/: additive.h  blind.cc  blind.h  ff.h  ff_add.h  hmax.h  hn_rpg.cc  hn_rpg.h  landmark_count.cc  landmark_count.h  new_operator.cc  new_operator.h  relaxed_sas_plus.cc  relaxed_sas_plus.h  rpg.cc  rpg.h  rpg_factory.h  rpg_table.cc  rpg_table.h  weighted_evaluator.h  width.cc  width.h  zobrist_ip_tiebreaking.h
src/landmark/: dtg.cc  dtg.h  generating_orderings.cc  generating_orderings.h  landmark.cc  landmark.h  landmark_count_base.cc  landmark_count_base.h  landmark_detection.cc  landmark_detection.h  landmark_graph.cc  landmark_graph.h
src/mpi_cuda_search/: hetro_hdgbfs_lg.cu  hetro_hdgbfs_lg.cuh
src/mpi_search/: hddehc.cc  hddehc.h  hdgbfs.cc  hdgbfs.h  hdgbfs1.cc  hdgbfs1.h  pddsgbfs.cc  pddsgbfs.h  pddshwgbfs.cc  pddshwgbfs.h  pigbfs.cc  pigbfs.h  symmetry_breaking_hdgbfs.cc  symmetry_breaking_hdgbfs.h  symmetry_breaking_pddsgbfs.cc  symmetry_breaking_pddsgbfs.h
src/multithread_search/: abstract_graph.cc  abstract_graph.h  binary_heap.h  closed_list.cc  closed_list.h  ff.h  ff_add.h  focus.h  gbfs_independent.cc  gbfs_independent.h  gbfs_portfolio.cc  gbfs_portfolio.h  gbfs_shared_closed.cc  gbfs_shared_closed.h  gbfs_shared_open.cc  gbfs_shared_open.h  greedy_pbnf.cc  greedy_pbnf.h  heuristic.cc  heuristic.h  heuristic_factory.cc  heuristic_factory.h  high_water_mark_compare.cc  high_water_mark_compare.h  hkpgbfs.cc  hkpgbfs.h  hmax.h  independent_context.cc  independent_context.h  kpgbfs.cc  kpgbfs.h  kpgbfs_dump.cc  kpgbfs_dump.h  kplg.cc  kplg.h  kplg_dump.cc  kplg_dump.h  landmark_count.h  lock_free_closed_list.cc  lock_free_closed_list.h  (+30 more)
src/node/: closed_list.cc  closed_list.h  node_vector.cc  node_vector.h  open_list.h  state_packer.cc  state_packer.h
src/open_lists/: alternating_open_list.cc  alternating_open_list.h  fifo_open_list_impl.h  lifo_open_list_impl.h  open_list_impl.cc  open_list_impl.h  open_list_impl_factory.cc  open_list_impl_factory.h  preferred_open_list.cc  preferred_open_list.h  preferred_plus_open_list.h  ro_open_list_impl.h  single_open_list.cc  single_open_list.h
src/postprocess/: action_elimination.cc  action_elimination.h
src/problem/: actions.h  domain.cc  domain.h  effect_vector.cc  effect_vector.h  facts.cc  facts.h  mutex_groups.cc  mutex_groups.h  parial_state.h  parser.cc  parser.h  partial_state.cc  partial_state.h  partial_state_vector.cc  partial_state_vector.h  relaxed_domain.h  state.cc  state.h  successor_generator.cc  successor_generator.h  var_value.h
src/random_walk/: local_restart.cc  local_restart.h  mrw13.h  mrw13_lmcount.cc  mrw13_lmcount.h  mrw13_multi.h  mrw13_multi_lmcount.cc  mrw13_multi_lmcount.h
src/sas_plus/: abstract_graph.cc  abstract_graph.h  effect_vector.cc  effect_vector.h  facts.cc  facts.h  mutex_groups.cc  mutex_groups.h  parse_utils.cc  parse_utils.h  partial_state.cc  partial_state.h  partial_state_vector.cc  partial_state_vector.h  relaxed_domain.cc  relaxed_domain.h  strong_stubborn_sets.cc  strong_stubborn_sets.h
src/search/: ashdgbfs.cc  ashdgbfs.h  best_first_buffer.h  bmrw.cc  bmrw.h  bts_gbfs.cc  bts_gbfs.h  dehc.cc  dehc.h  gbfs.cc  gbfs.h  gbfs_lmc.cc  gbfs_lmc.h  hddehc.cc  hddehc.h  hdgbfs.cc  hdgbfs.h  hdgbfs1.cc  hdgbfs1.h  hdgbfs1_lmc.cc  hdgbfs1_lmc.h  hdgbfs_lmc.cc  hdgbfs_lmc.h  hdswastar.h  hdwastar.h  kgbfs.cc  kgbfs.h  lazy_gbfs.cc  lazy_gbfs.h  mrw13.cc  mrw13.h  multi_focus_gbfs.cc  multi_focus_gbfs.h  orbit_gbfs.cc  orbit_gbfs.h  parallel_gbfs_simulator.cc  parallel_gbfs_simulator.h  pddgbfs.h  pddsbgbfs.h  pddsbgbfs_lmc.cc  (+24 more)
src/search_graph/: distributed_search_graph.cc  distributed_search_graph.h  distributed_search_graph_with_costs.h  search_graph_with_costs.h  (+9 more)
(+95 files in other folders)
